tests/testdata/envoyfilter-valid.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: waypoint
spec:
  configPatches:
    - applyTo: HTTP_FILTER
      match:
        context: WAYPOINT
        waypoint:
          filter:
            name: "envoy.filters.network.http_connection_manager"
            subFilter:
              name: "envoy.filters.http.router"
---
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: waypoint
spec:
  configPatches:
    - applyTo: CLUSTER
      match:
        context: WAYPOINT
        waypoint: {}
---
