tests/testdata/wasm-valid.yaml
apiVersion: extensions.istio.io/v1alpha1
kind: WasmPlugin
metadata:
  name: full
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  url: file:///opt/filters/openid.wasm
  sha256: 1ef0c9a92b0420cf25f7fe5d481b231464bc88f486ca3b9c83ed5cc21d2f6210
  phase: AUTHN
  pluginConfig:
    openid_server: authn
    openid_realm: ingress
---
apiVersion: extensions.istio.io/v1alpha1
kind: WasmPlugin
metadata:
  name: sha256-empty
spec:
  url: "http://test"
---
apiVersion: extensions.istio.io/v1alpha1
kind: WasmPlugin
metadata:
  name: env
spec:
  url: "http://test"
  vmConfig:
    env:
      - name: "test"
        valueFrom: HOST
      - name: "test2"
        valueFrom: INLINE
        value: "test"
      - name: "test3"
        value: "test"
---
apiVersion: extensions.istio.io/v1alpha1
kind: WasmPlugin
metadata:
  name: noprefix-image-default-lib-and-tag
spec:
  url: "bar"
---
apiVersion: extensions.istio.io/v1alpha1
kind: WasmPlugin
metadata:
  name: noprefix-image-default-lib-with-tag
spec:
  url: "bar:latest"
---
apiVersion: extensions.istio.io/v1alpha1
kind: WasmPlugin
metadata:
  name: noprefix-image-explicit-lib-default-tag
spec:
  url: "library/bar"
---
apiVersion: extensions.istio.io/v1alpha1
kind: WasmPlugin
metadata:
  name: noprefix-image-explicit-lib-and-tag
spec:
  url: "library/bar:latest"
---
apiVersion: extensions.istio.io/v1alpha1
kind: WasmPlugin
metadata:
  name: noprefix-image-with-explicit-repo-and-tag
spec:
  url: "foo.bar/foo/bar:1.21.4"
---
apiVersion: extensions.istio.io/v1alpha1
kind: WasmPlugin
metadata:
  name: noprefix-image-with-explicit-repo-and-tag-and-port
spec:
  url: "foo.bar:5000/client_id_matches_cert:latest"
---
apiVersion: extensions.istio.io/v1alpha1
kind: WasmPlugin
metadata:
  name: oci-image-explicit-lib-default-tag
spec:
  url: "oci://library/bar"
---
apiVersion: extensions.istio.io/v1alpha1
kind: WasmPlugin
metadata:
  name: oci-image-explicit-lib-and-tag
spec:
  url: "oci://library/bar:latest"
---
apiVersion: extensions.istio.io/v1alpha1
kind: WasmPlugin
metadata:
  name: oci-image-with-explicit-repo-and-tag
spec:
  url: "oci://foo.bar/foo/bar:1.21.4"
---
apiVersion: extensions.istio.io/v1alpha1
kind: WasmPlugin
metadata:
  name: oci-image-with-explicit-repo-and-tag-and-port
spec:
  url: "oci://foo.bar:5000/client_id_matches_cert:latest"
